--- a/src/comment/Dockerfile
+++ b/src/comment/Dockerfile
@@ -1,11 +1,11 @@
-FROM ruby:2.2.1-alpine
-RUN apt update -qq && apt install -y build-essential && apt install -y bundler
+FROM ruby:2.7
+RUN apt-get update -qq && apt-get install -y build-essential
 
 ENV APP_HOME /app
 RUN mkdir $APP_HOME
 WORKDIR $APP_HOME
 ADD Gemfile* $APP_HOME/
-RUN bundle install
+RUN bundle update --bundler && bundle install
 COPY . $APP_HOME
 
 ENV COMMENT_DATABASE_HOST comment_db
