--- a/src/.env.example
+++ b/src/.env.example
@@ -1,7 +1,7 @@
 mongo_version: "3.2"
-ui_container_port: "9292"
-ui_host_port: "9292"
-ui_version: "1.0"
-post_version: "1.0"
-comment_version: "1.0"
-username: "koreni"
+ui_container_port: 9292
+ui_host_port: 9292
+ui_version: 1.0
+post_version: 1.0
+comment_version: 1.0
+username: ""
