--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     env_file:
     - .env
     build: ./ui
-    image: ${username}/ui:1.0
+    image: ${USERNAME}/ui:1.0
     ports:
       - 9292:9292/tcp
     networks:
@@ -22,7 +22,7 @@ services:
     env_file:
       - .env
     build: ./post-py
-    image: ${username}/post:1.0
+    image: ${USERNAME}/post:1.0
     networks:
       - back-net
       - front-net
@@ -30,7 +30,7 @@ services:
     env_file:
     - .env
     build: ./comment
-    image: ${username}/comment:1.0
+    image: ${USERNAME}/comment:1.0
     networks:
       - back-net
       - front-net
