--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,15 +10,26 @@ services:
       - post_db:/data/db
     networks:
       - back-net
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+
   ui:
     env_file:
     - .env
-    build: ../src/ui/docker_build.sh
+    build: /Users/koreni/DevOps/OTUS/l004/koreni2000_microservices/src/ui/docker_build.sh
     image: ${username}/ui:${ui_version}
     ports:
       - ${ui_host_port}:${ui_container_port}/tcp
     networks:
       - front-net
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+
   post:
     env_file:
       - .env
@@ -27,6 +38,14 @@ services:
     networks:
       - back-net
       - front-net
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+
   comment:
     env_file:
     - .env
@@ -35,46 +54,49 @@ services:
     networks:
       - back-net
       - front-net
-  prometheus:
-    image: ${username}/prometheus
-    ports:
-      - '9090:9090'
-    volumes:
-      - prometheus_data:/prometheus
-    command: # Передаем доп параметры в командной строке
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention=1d' # Задаем время хранения метрик в 1 день
-    networks:
-      - back-net
-      - front-net
-  node-exporter:
-    image: prom/node-exporter:v0.15.2
-    user: root
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
-    networks:
-      - back-net
-  mongodb-exporter:
-    image: bitnami/mongodb-exporter:latest
     environment:
-      - MONGODB_URI=mongodb://post_db:27017
-    ports:
-      - "9216:9216"
-    networks:
-      - back-net
-  blackbox-exporter:
-    image: prom/blackbox-exporter:latest
-    ports:
-      - "9115:9115"
-    networks:
-      - back-net
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+
+  # prometheus:
+  #   image: ${username}/prometheus
+  #   ports:
+  #     - '9090:9090'
+  #   volumes:
+  #     - prometheus_data:/prometheus
+  #   command: # Передаем доп параметры в командной строке
+  #     - '--config.file=/etc/prometheus/prometheus.yml'
+  #     - '--storage.tsdb.path=/prometheus'
+  #     - '--storage.tsdb.retention=1d' # Задаем время хранения метрик в 1 день
+  #   networks:
+  #     - back-net
+  #     - front-net
+  # node-exporter:
+  #   image: prom/node-exporter:v0.15.2
+  #   user: root
+  #   volumes:
+  #     - /proc:/host/proc:ro
+  #     - /sys:/host/sys:ro
+  #     - /:/rootfs:ro
+  #   command:
+  #     - '--path.procfs=/host/proc'
+  #     - '--path.sysfs=/host/sys'
+  #     - '--collector.filesystem.ignored-mount-points="^/(sys|proc|dev|host|etc)($$|/)"'
+  #   networks:
+  #     - back-net
+  # mongodb-exporter:
+  #   image: bitnami/mongodb-exporter:latest
+  #   environment:
+  #     - MONGODB_URI=mongodb://post_db:27017
+  #   ports:
+  #     - "9216:9216"
+  #   networks:
+  #     - back-net
+  # blackbox-exporter:
+  #   image: prom/blackbox-exporter:latest
+  #   ports:
+  #     - "9115:9115"
+  #   networks:
+  #     - back-net
 
 volumes:
   post_db:
