--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -7,8 +7,7 @@ RUN apk --no-cache --update add build-base gcc musl-dev && \
     pip install -r /app/requirements.txt && \
     apk del build-base
 
-
 ENV POST_DATABASE_HOST post_db
 ENV POST_DATABASE posts
 
-ENTRYPOINT ["python3", "post_app.py"]
+CMD ["python3", "post_app.py"]
