--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -1,11 +1,10 @@
 FROM python:3.6.0-alpine
+RUN apk --no-cache add gcc musl-dev linux-headers
 
 WORKDIR /app
 ADD . /app
 
-RUN apk --no-cache --update add build-base gcc musl-dev && \
-    pip install -r /app/requirements.txt && \
-    apk del build-base
+RUN pip install -r /app/requirements.txt && pip install Flask markupsafe==1.1.1
 
 ENV POST_DATABASE_HOST post_db
 ENV POST_DATABASE posts
