--- a/docker/.env.example
+++ b/docker/.env.example
@@ -4,6 +4,6 @@ ui_host_port=9292
 ui_version=1.0
 post_version=1.0
 comment_version=1.0
-username="koreni"
+USERNAME="koreni"
 MONGODB_URI="mongodb://root:root@post_db:27017"
 ZIPKIN_ENABLED=true
